--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
 _xmsgs/
 xst/
+
 *.xreport
 *.gise
 *.jhd
+*.html
+*.xrpt
+*.cmd_log
+*.lso
+*.ngc
+*.ngr
+*.prj
+*.stx
+*.syr
+*.vhf
+*.xst
+
+sch2HdlBatchFile
+webtalk_pn.xml
