--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,44 @@
+_ngo/
 _xmsgs/
 iseconfig/
+xlnx_auto_0_xdb/
 xst/
 
-*.xreport
+*_bitgen.*
+*_envsettings.*
+*_guide.*
+*_map.*
+*_pad.*
+*_summary.*
+*_usage.*
+
+*.bgn
+# *.bin
+*.bit
+*.bld
+*.cmd_log
+*.drc
 *.gise
 *.jhd
 *.html
-*.xrpt
-*.cmd_log
 *.lso
-*.ngc
-*.ngr
+*.nc*
+*.ng*
+*.pa*
+*.pcf
 *.prj
-*.stx
+*.ptwx
+*.st*
 *.syr
+*.tw*
+*.unroutes
+*.ut
 *.vhf
+*.xpi
+*.xreport
+*.xrpt
 *.xst
+*.xwbt
 
 sch2HdlBatchFile
-webtalk_pn.xml
+webtalk*
